contrast fix

--- a/sd.css
+++ b/sd.css
@@ -159,7 +159,7 @@ input.inverted::placeholder {
 }
 .block-header-1 .nav-item a {
   text-decoration: none;
-  color: #2b2b2b;
+  color: #e8e5da;
 }
 .block-header-1 .nav-item a:hover {
   color: #666;
@@ -203,7 +203,7 @@ input.inverted::placeholder {
 }
 .block-header-2 .nav-item a {
   text-decoration: none;
-  color: #2b2b2b;
+  color: #e8e5da;
 }
 .block-header-2 .nav-item a:hover {
   color: #666;
